# labs-oaip

LabWork4_PartC/: CMakeLists.txt  array_utils.cpp  array_utils.h  main.cpp  tests.cpp
